atualização do curriculo

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,7 +7,7 @@ contact:
   email: info@johndoe.com
   github: johndoe
   linkedin: johndoe
-  phone: 
+  phone: htdhthdhdhhhh
   gitlab: 
   twitter: 
 
